<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailUserActivity"
    android:background="@color/primary"
    android:orientation="vertical"
    android:id="@+id/detail_data_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <!-- Toolbar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary">


                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:src="@drawable/ic_arrow_back"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/tv_detail_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    tools:text="Username"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/profile_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            tools:src="@tools:sample/avatars" />

        <TableLayout
            android:id="@+id/table"
            android:layout_width="290dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintTop_toBottomOf="@id/appbar">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_detail_repository"
                    style="@style/tvNumberfollow"
                    tools:text="69" />

                <TextView
                    android:id="@+id/tv_detail_follower"
                    style="@style/tvNumberfollow"
                    tools:text="666" />

                <TextView
                    android:id="@+id/tv_detail_following"
                    style="@style/tvNumberfollow"
                    tools:text="666" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/detail_repo"
                    style="@style/tvTable"
                    android:layout_width="97dp"
                    android:text="@string/repository" />

                <TextView
                    android:id="@+id/detail_followers"
                    style="@style/tvTable"
                    android:text="@string/follower" />

                <TextView
                    android:id="@+id/detail_following"
                    style="@style/tvTable"
                    android:layout_width="97dp"
                    android:text="@string/following" />

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/tv_detail_name"
            style="@style/tvDetailname"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            tools:text="Name" />

        <TextView
            android:id="@+id/tv_detail_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:lines="2"
            android:maxLines="2"
            android:singleLine="false"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
            tools:text="Bio" />

        <ImageView
            android:id="@+id/iv_icon_location"
            style="@style/iconInDetail"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_bio" />

        <TextView
            android:id="@+id/tv_detail_location"
            style="@style/tvDetail"
            app:layout_constraintStart_toEndOf="@id/iv_icon_location"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_bio"
            tools:text="Location" />

        <ImageView
            android:id="@+id/iv_icon_company"
            style="@style/iconInDetail"
            android:src="@drawable/ic_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_icon_location" />

        <TextView
            android:id="@+id/tv_detail_company"
            style="@style/tvDetail"
            app:layout_constraintStart_toEndOf="@id/iv_icon_location"
            app:layout_constraintTop_toBottomOf="@id/iv_icon_location"
            tools:text="Company" />

        <ImageView
            android:id="@+id/iv_icon_blog"
            style="@style/iconInDetail"
            android:src="@drawable/ic_web"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_icon_company" />

        <TextView
            android:id="@+id/tv_detail_blog"
            style="@style/tvDetail"
            app:layout_constraintStart_toEndOf="@id/iv_icon_blog"
            app:layout_constraintTop_toBottomOf="@id/iv_icon_company"
            tools:text="Blog" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_icon_blog"
            app:icon="@drawable/ic_favorite_border"
            android:text="@string/tambahkan_ke_favorit"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"/>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/primary"
            app:layout_constraintTop_toBottomOf="@id/btn_favorite"
            app:tabTextColor="@color/white"
            app:tabIndicatorColor="@color/white"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="400dp"
            app:layout_constraintTop_toBottomOf="@id/tabs"
            android:background="@color/primary" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>